# cf

./: LICENSE  README.md  cf.cabal
src/Math/: ContinuedFraction.hs  Effective.hs
src/Math/ContinuedFraction/: Effective.hs  Interval.hs  Simple.hs
tests/: Tests.hs
wip/: Effective.hs
