name:                cf
version:             0.1
synopsis:            Infinite precision arithmetic using continued fractions
license:             MIT   
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
homepage:            http://github.com/mvr/cf
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/mvr/cf.git

library
  hs-source-dirs:      src
  exposed-modules:     Math.ContinuedFraction
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
