name:                cf
version:             0.2
synopsis:            Exact real arithmetic using continued fractions
license:             MIT   
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
homepage:            http://github.com/mvr/cf
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/mvr/cf.git

library
  hs-source-dirs:  src
  exposed-modules: Math.ContinuedFraction,
                   Math.ContinuedFraction.Simple,
                   Math.ContinuedFraction.Interval
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  default-language:    Haskell2010
  hs-source-dirs:
    tests
  build-depends:
    base,
    cf,
    QuickCheck                 >= 2.4,
    test-framework             >= 0.6,
    test-framework-quickcheck2 >= 0.2,
    test-framework-th          >= 0.2
